--- a/index.html
+++ b/index.html
@@ -14,14 +14,8 @@
           <hr>
         </div>
       </header>
-      <section class="row">
-        <div class="col-md-12 text-center">
-          <img src="cat.jpg" alt="cute cat" class="img-responsive center-block img-rounded cat-image">
-          <div id="click-box">
-            <h4>Click Count:</h4>
-            <p class="count">0</p>
-          </div>
-        </div>
+      <section class="row cat-holder">
+        <div class="cat-column col-md-6"></div>
       </section>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
