--- a/Premium/index.html
+++ b/Premium/index.html
@@ -14,8 +14,16 @@
           <hr>
         </div>
       </header>
-      <section class="row cat-holder">
-        <div class="cat-column col-md-6"></div>
+      <section class="row cat-stuff">
+        <div class="col-md-offset-4 cat-selectors">
+           <button class="btn btn-default" id="cats0">Cat 1</button>
+           <button class="btn btn-default" id="cats1">Cat 2</button>
+           <button class="btn btn-default" id="cats2">Cat 3</button>
+           <button class="btn btn-default" id="cats3">Cat 4</button>
+           <button class="btn btn-default" id="cats4">Cat 5</button>
+        </div>
+        <div class="col-md-12 cat-display text-center">
+        </div>
       </section>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
